# LexODS

./: README.md  alphabetical.json  config.example.py  convert_old_orthography.py  data.json  get_ods_list.py  lexods.py  lowercase.py  main.py  ods_2021-07-30.csv  pyproject.toml  requirements.txt
deprecated/: convert_old_orthography.py  lowercase.py
models/: ods_entry.py  wikidata.py
modules/: wikidata_util.py
