[tool.poetry]
name = "lexods"
version = "0.1.0"
description = "Script to sync ODS and Danish lexemes in Wikidata"
authors = ["Your Name <you@example.com>"]
license = "GPLv3+"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
wikibaseintegrator = "^0.12.4"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"
pydantic = "^2.5.3"
black = "^23.12.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
